# jvm-serializable

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
jvm_macro/: Cargo.toml  README.md
jvm_macro/src/: lib.rs
src/: lib.rs
tests/: test.rs
