[package]
name = "jvm-serializable"
version = "0.1.0"
authors = ["Daniel Lewiński <nerull@craftsoft.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jvm-macro = { path = "jvm_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_derive_internals = "0.25.0"
bincode = "1.3.1"
serde_json = "1.0.59"
lazy_static = "1.4.0"
traitcast = "0.5"

[dev-dependencies]
criterion = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[[bench]]
name = "benchmarks"
harness = false