[package]
name = "jvm-serializable"
version = "0.0.1"
authors = ["Daniel Lewiński <nerull@craftsoft.eu>"]
edition = "2018"
description = "Simple Rust version of jvm standard serialize and deserialize"
license-file = "LICENSE"
homepage = "https://github.com/kathog/jvm-serializable"
repository = "https://github.com/kathog/jvm-serializable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jvm-macro = { path = "jvm_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_derive_internals = "0.25.0"
bincode = "1.3.1"

[dev-dependencies]
criterion = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[[bench]]
name = "benchmarks"
harness = false