[package]
name = "jvm-macro"
version = "0.0.1"
authors = ["Daniel Lewiński <nerull@craftsoft.eu>"]
edition = "2018"
description = "Simple Rust version of jvm standard serialize and deserialize"
license-file = "LICENSE"
homepage = "https://github.com/kathog/jvm-serializable"
repository = "https://github.com/kathog/jvm-serializable"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
serde = { version = "1.0", features = ["derive"] }
quote = "1.0"
syn = { version = "1.0.33", default-features = true, features = ["derive", "parsing", "printing", "clone-impls", "visit"] }
proc-macro2  = "1.0"
serde_derive_internals = "0.25.0"
